import "net/universal.proto";

package dist_clang.perf.proto;

message Metric {
  enum Name {
    DIRECT_CACHE_HIT   = 1;
    DIRECT_CACHE_MISS  = 2;
    SIMPLE_CACHE_HIT   = 3;
    SIMPLE_CACHE_MISS  = 4;

    REMOTE_TIME_WASTED = 5;
    // in milliseconds.

    REMOTE_TASK_DONE   = 6;
    LOCAL_TASK_DONE    = 7;

    CACHE_SIZE_CLEANED = 8;
    // in bytes.

    CACHE_SIZE_ADDED   = 9;
    // in bytes.

    REMOTE_COMPILATION_FAILED   = 10;
    REMOTE_COMPILATION_REJECTED = 11;

    REMOTE_RESOLVE_TIME         = 12;
    // in milliseconds.

    REMOTE_CONNECT_TIME         = 13;
    // in milliseconds.

    PREPROCESS_TIME             = 14;
    // in milliseconds.

    DIRECT_CACHE_LOOKUP_TIME    = 15;
    // in milliseconds.

    SIMPLE_CACHE_LOOKUP_TIME    = 16;
    // in milliseconds.

    LOCAL_COMPILATION_TIME      = 17;
    // in milliseconds.

    REMOTE_COMPILATION_TIME     = 18;
    // in milliseconds.

    DIRECT_CACHE_UPDATE_TIME    = 19;
    // in milliseconds.

    SIMPLE_CACHE_UPDATE_TIME    = 20;
    // in milliseconds.

    REMOTE_CACHE_HIT            = 21;

    HASH_MISMATCH               = 22;
  }

  required Name name    = 1;
  optional uint64 value = 2;
}

message Report {
  repeated Metric metric = 1;

  extend net.proto.Universal {
    optional Report extension = 7;
  }
}
